# project_with_poetry

./: pyproject.toml
tests/: tests_poetry.py
