[tool.poetry]
name = "qagury-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qagury_poetry"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
selene = "^2.0.0b14"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"

[tool.pytest.ini_options]
addopts="-vs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

